turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:16: error: type mismatch;
 found   : Int
 required: java.awt.Color
    case 0 => co = e(0);state = e(2)
                    ^Turmite:17: error: type mismatch;
 found   : Int
 required: java.awt.Color
    case 1 => co = e(0);state = e(2);avance()
                    ^Turmite:18: error: type mismatch;
 found   : Int
 required: java.awt.Color
    case 2 => co = e(0);state = e(2);gauche();avance()
                    ^Turmite:19: error: type mismatch;
 found   : Int
 required: java.awt.Color
    case 4 => co = e(0);state = e(2);droite();droite();avance()
                    ^Turmite:20: error: type mismatch;
 found   : Int
 required: java.awt.Color
    case 8 => co = e(0);state = e(2);droite();avance()
                    ^